# FletApp

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
ui/: main_app.py  router.py
ui/components/: alerts.py  cards.py  notifications.py
ui/helpers/: __init__.py  styles.py  themes.py  utils.py
ui/layouts/: __init__.py  appbar.py  base.py  footer.py  sidebar.py
ui/views/: __init__.py  colors.py  dashboard.py  icons.py  settings.py
